--- a/share/examples/cube/Makefile-host
+++ b/share/examples/cube/Makefile-host
@@ -6,8 +6,8 @@ LIBS            += -lm
 
 #all:           demo
 
-demo:           demo.o gpio.o
-		${CC} ${LDFLAGS} -o demo.elf demo.o gpio.o ${LIBS}
+demo:           demo.o fubarino.o
+		${CC} ${LDFLAGS} -o demo.elf demo.o fubarino.o ${LIBS}
 		${OBJDUMP} -S demo.elf > demo.dis
 		${SIZE} demo.elf
 		${ELF2AOUT} demo.elf $@
