--- a/src/games/cribbage/Makefile
+++ b/src/games/cribbage/Makefile
@@ -12,6 +12,7 @@ include $(TOPSRC)/target.mk
 #include $(TOPSRC)/cross.mk
 #CFLAGS  	= -O -Werror -DCROSS
 
+CFLAGS          += -Wall -Werror
 OBJS            = extern.o crib.o support.o cards.o score.o io.o
 TOBJS           = test.o cards.o score.o io.o extern.o
 MAN             = cribbage.0
