Added kernel configuration for Olimex Pinguino-Micro board (with mx795 chip).

--- a/sys/pic32/Makefile
+++ b/sys/pic32/Makefile
@@ -5,7 +5,7 @@ SUBDIR		= baremetal duinomite duinomite-uart duinomite-e \
                   duinomite-e-uart explorer16 max32 maximite \
                   meb starter-kit sdxl ubw32 ubw32-uart \
                   ubw32-uart-sdram baremetal fubarino mmb-mx7 maximite-color \
-                  32mxsdram-uart picadillo wf32
+                  32mxsdram-uart picadillo wf32 pinguino-micro
 
 default:
 
