--- a/src/cmd/Makefile
+++ b/src/cmd/Makefile
@@ -12,7 +12,7 @@ CFLAGS          += -Werror
 # /bin
 SUBDIR		= adb adc-demo aout ar as awk basic cc chflags chpass \
                   cpp dc diff emg env fdisk find forth fstat glcdtest \
-                  hostname id la lcc lcpp ld ls login make man med \
+                  hostname id la lcc lcpp ld ls login make man md5 med \
                   more nm passwd picoc portio printf pwm \
                   ranlib re renice retroforth scm setty sl \
                   sed sh smallc smlrc stty sysctl test uname wiznet xargs \
