Create $DESTDIR/share/calendar directory on install. Also, added .gitignore for all new components.

--- a/src/cmd/calendar/Makefile
+++ b/src/cmd/calendar/Makefile
@@ -27,6 +27,7 @@ depend:         ${SRCS}
 install:        all
 		install calendar ${DESTDIR}/bin/calendar
 		cp ${MAN} ${DESTDIR}/share/man/cat1/
+		@mkdir -p ${DESTDIR}/share/calendar
 		install calendars/calendar.* ${DESTDIR}/share/calendar/
 
 lint:           ${SRCS}
