Add fold utility from FreeBSD 2.0.

--- a/src/cmd/Makefile
+++ b/src/cmd/Makefile
@@ -10,14 +10,14 @@ CFLAGS          += -Werror
 
 # Programs that live in subdirectories, and have makefiles of their own.
 # /bin
-SUBDIR		= adb adc-demo aout ar as awk basic cc chflags chpass \
-                  cpp dc diff emg env fdisk find forth fstat glcdtest \
-                  hostname id la lcc lcpp ld ls login make man md5 med \
-                  more nm passwd picoc portio printf pwm \
+SUBDIR		= adb adc-demo aout ar as awk basic calendar cc chflags \
+                  chpass cpp dc diff emg env fdisk find fold forth fstat \
+                  glcdtest hostname id la lcc lcpp ld ls login make man \
+                  md5 med more nm passwd picoc portio printf pwm \
                   ranlib re renice retroforth scm setty sl \
                   sed sh smallc smlrc stty sysctl test uname wiznet xargs \
                   zmodem gtest msec unixbench cron compress date2 tip \
-                  talloc devupdate uucp smux calendar
+                  talloc devupdate uucp smux
 
 # /sbin
 SUBDIR         += chown chroot disktool fsck getty init \
