Added a tiny implementation of readline library, based on linenoise sources. See https://github.com/antirez/linenoise for details.
Implemented a routine atexit() in libc.

Pdc modified to use readline library.

--- a/src/cmd/pdc/Makefile
+++ b/src/cmd/pdc/Makefile
@@ -8,7 +8,8 @@ OBJS            = pdc.o
 LDFLAGS         += -g
 
 CFLAGS		+= -Werror -Wall -Os
-CFLAGS          += -DGCC_COMPAT -DHAVE_CPP_VARARG_MACRO_GCC
+CFLAGS          += -DGCC_COMPAT -DHAVE_CPP_VARARG_MACRO_GCC -DHAVE_READLINE
+LIBS            = -lreadline -lc
 
 all:            pdc
 
