Fix bug in assembler: incorrect reordering of branch instruction. Increase cpp buffer size.

--- a/src/cmd/as/tests/Makefile
+++ b/src/cmd/as/tests/Makefile
@@ -2,14 +2,14 @@ TOPSRC		= $(shell cd ../../../..; pwd)
 include $(TOPSRC)/target.mk
 
 CFLAGS		+= -Wall -Os
-TESTS           = test1 test2 test3 test4
+TESTS           = test1 test2 test3 test4 test5
 
-all:            ../as ../aout
+all:            ../../../../lib/as ../../../../lib/aout
 		for i in $(TESTS); do \
                     $(AS) $$i.s -o $$i.o; \
                     $(OBJDUMP) -D $$i.o > $$i.gcc-dis; \
-                    ../as $$i.s -o $$i.o; \
-                    ../aout -r $$i.o > $$i.dis; \
+                    ../../../../lib/as $$i.s -o $$i.o; \
+                    ../../../../lib/aout -r $$i.o > $$i.dis; \
                 done
 
 clean:
