--- a/sys/pic32/wf32/Config
+++ b/sys/pic32/wf32/Config
@@ -1,9 +1,8 @@
 #
-# chipKIT Max32 board with SD card shield
-# For details, see https://github.com/RetroBSD/retrobsd/wiki/Board-chipKIT-Max32
+# chipKIT WF32 board with microSD card on 2.4" LCD TFT display shield
 #
 # To build the kernel, use:
-#   cd sys/pic32/max32
+#   cd sys/pic32/wf32
 #   kconfig Config
 #   make clean
 #   make
@@ -11,7 +10,7 @@
 machine         "pic32"
 
 cpu             "PIC32MX7"
-ident           CHIPKIT_MAX
+ident           CHIPKIT_WF
 
 # Linker script
 ldscript        "cfg/bootloader-max32.ld"
@@ -32,7 +31,11 @@ options         "UCB_METER"                 # Collect kernel statistics
 
 # LED
 options         "LED_KERNEL_PORT=TRISA"     # for kernel activity LED...
-options         "LED_KERNEL_PIN=3"          # ...use pin RA3
+options         "LED_KERNEL_PIN=0"          # ...use pin RA3
+options         "LED_DISK_PORT=TRISF"       # for disk activity LED...
+options         "LED_DISK_PIN=0"            # ...use pin RF0
+options         "LED_TTY_PORT=TRISA"        # for serial activity LED...
+options         "LED_TTY_PIN=1"             # ...use pin RA1
 
 # Root filesystem at /dev/sd0a, swap at /dev/sd0b
 config          unix    root on sd0a
@@ -41,29 +44,21 @@ config          unix    root on sd0a
 
 # Serial UART ports
 device          uart1                       # Serial-to-USB converter
-device          uart2
-device          uart3
-device          uart4
 options         "UART1_ENABLED"             # TODO: delete this option
-options         "UART2_ENABLED"             # TODO: delete this option
-options         "UART3_ENABLED"             # TODO: delete this option
-options         "UART4_ENABLED"             # TODO: delete this option
 
 # Console options
 options         "CONSOLE_DEVICE=tty0"       # /dev/tty0
-#TODO: options  "CONS_MAJOR=17"             # use UART device as console
-#TODO: options  "CONS_MINOR=0"              # use uart1 unit as console
 
 # SPI ports
 controller      spi2                        # SD card
 options         "SPI_ENABLED"               # TODO: delete this option
 
 # microSD card
-disk            sd0     at spi2 flags 0x3e  # select pin RC14
+disk            sd0     at spi2 flags 0x44  # select pin RD4
 options         "SD0_MHZ=10"                # speed 10 MHz
 options         "SD0_PORT=2"                # at spi2               TODO: delete
-options         "SD0_CS_PORT=TRISC"         # for chip select...    TODO: use flags
-options         "SD0_CS_PIN=14"             # ...use pin RC14       TODO: use flags
+options         "SD0_CS_PORT=TRISD"         # for chip select...    TODO: use flags
+options         "SD0_CS_PIN=4"              # ...use pin RD4        TODO: use flags
 
 # General purpose I/O ports
 device          gpio0
@@ -76,7 +71,3 @@ options         "ADC_ENABLED"               # TODO: delete this option
 # PWM driver
 device          pwm0
 options         "PWM_ENABLED"               # TODO: delete this option
-
-# Skeleton driver
-#device         skel0
-#options        "SKEL_ENABLED"              # TODO: delete this option
