--- a/sys/pic32/max32/Config
+++ b/sys/pic32/max32/Config
@@ -7,6 +7,8 @@
 #   make clean
 #   make
 #
+# For details, see http://retrobsd.org/wiki/doku.php/doc/kconfig
+#
 machine         "pic32"
 
 cpu             "PIC32MX7"
@@ -20,7 +22,6 @@ timezone        8 dst
 maxusers        1
 
 # Standard system options
-#options         "CONFIG=MAX32"              # TODO
 options         "CPU_KHZ=80000"             # Oscillator frequency of CPU core
 options         "BUS_KHZ=80000"             # Frequency of peripheral bus
 options         "HZ=100"                    # Rate of clock interrupt
@@ -51,8 +52,6 @@ options         "UART4_ENABLED"             # TODO: delete this option
 
 # Console options
 options         "CONSOLE_DEVICE=tty0"       # /dev/tty0
-#TODO: options  "CONS_MAJOR=17"             # use UART device as console
-#TODO: options  "CONS_MINOR=0"              # use uart1 unit as console
 
 # SPI ports
 controller      spi2                        # SD card
